# netbox-data-flows

./: .editorconfig  .gitignore  .pre-commit-config.yaml  404.html  MANIFEST.in  README.md  SECURITY.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  requirements_dev.txt  requirements_docs.txt  setup.py  sitemap.xml
.github/: PULL_REQUEST_TEMPLATE.md  RELEASE-TEMPLATE.md
.github/ISSUE_TEMPLATE/: 01-feature_request.yaml  02-bug_report.yaml  03-documentation_change.yaml  config.yml
.github/scripts/: get-netbox-versions.sh
.github/workflows/: build-package.yml  check-documentation.yml  check-linting.yml  get-netbox-versions.yml  prepare-release.yml  publish-documentation.yml  publish-pypi.yml  python-black.yml  python-build-and-release.yml  python-build.yml  python-publish-pypi.yml  python-publish-testpypi.yml  python-release.yml  run-tests.yml
changelog/: index.html
data-model/: index.html
docs/: data-model.md  installation-configuration.md  quick-start.md  security.md
installation-configuration/: index.html
media/: tuto-acme-dataflow-diagram.drawio
netbox_data_flows/: __init__.py  apps.py  choices.py  constants.py  navigation.py  search.py  signals.py  urls.py
netbox_data_flows/api/: urls.py  views.py
netbox_data_flows/api/serializers/: __init__.py  applications.py  dataflows.py  groups.py  nested.py  objectaliases.py
netbox_data_flows/filtersets/: __init__.py  addins.py  applications.py  dataflows.py  filters.py  groups.py  objectaliases.py
netbox_data_flows/forms/: __init__.py  applicationroles.py  applications.py  dataflows.py  fields.py  groups.py  objectaliases.py
netbox_data_flows/graphql/: __init__.py  applications.py  dataflows.py  groups.py  objectaliases.py
netbox_data_flows/management/commands/: delete_orphaned_aliases.py
netbox_data_flows/migrations/: 0001_initial.py  0001_initial_squashed_new_installations.py  0002_alter_dataflow_destination_ipaddress_and_more.py  0002_alter_objectalias_options.py  0002_application_tenant_dataflow_tenant_and_more.py  0003_allow_port_0_in_source_and_destination_ports.py  0003_alter_application_custom_field_data_and_more.py  0003_dataflow_status_dataflowtemplate_status.py  0004_alter_dataflow_status_alter_dataflowtemplate_status.py  0004_applicationrole_comments.py  0004_reindex_netbox_data_flows.py  0005_add_owner_fields_nb45.py  0005_alter_dataflow_status_alter_dataflowtemplate_status_and_more.py  0005_dataflowgroup_slug.py  0006_reindex_netbox_data_flows.py  0006_remove_application_services.py  0007_objectaliastarget_objectalias_and_more.py  0007_remove_objectalias_size.py  0008_alter_objectaliastarget_aliased_object_type.py  0008_delete_orphaned_aliases.py  0009_fix_empty_dfg_slugs.py  0010_alter_objectaliastarget_options.py  0011_objectalias_comments.py  0012_split_objectaliastargets_into_direct_relationships.py  0013_objectalias_dynamic_members.py
netbox_data_flows/models/: __init__.py  applications.py  dataflows.py  groups.py  objectaliases.py
netbox_data_flows/tables/: applications.py  columns.py  dataflows.py  groups.py  objectaliases.py
netbox_data_flows/templates/netbox_data_flows/: application.html  applicationrole.html  dataflow.html  dataflow_create.html  dataflow_edit.html  dataflow_list.html  dataflow_tab.html  dataflow_targets.html  dataflowgroup.html  dataflowtemplate.html  objectalias.html  objectalias_dataflows.html  objectalias_removetarget.html  objectalias_tab.html  related_dataflow_tab.html
netbox_data_flows/templates/netbox_data_flows/inc/: dataflow_specifications.html  objectaliastarget_actions.html
netbox_data_flows/tests/: data.py  query_counts.json  test_api.py  test_filtersets.py  test_helpers.py  test_models.py  test_views.py
netbox_data_flows/utils/: __init__.py  aliases.py  helpers.py  tables.py  tags.py  views.py
netbox_data_flows/views/: __init__.py  applicationroles.py  applications.py  dataflows.py  dataflowtemplates.py  groups.py  model_tabs.py  objectaliases.py
quick-start/: index.html
search/: search_index.json
security/: index.html
