[project]
name = "netbox-data-flows"
description = "NetBox plugin to document data flows between systems and applications."
authors = [
  { name="Thomas Fargeix" },
]
license = "Apache-2.0"
license-files = ["LICENSE"]
readme = {file = "README.md", content-type = "text/markdown"}
keywords = ["netbox", "netbox-plugins"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Plugins",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: System :: Networking",
]
requires-python = ">=3.12"
dynamic = ["version"]

[project.urls]
"Homepage" = "https://github.com/Alef-Burzmali/netbox-data-flows"
"Documentation" = "https://Alef-Burzmali.github.io/netbox-data-flows"
"Bug Tracker" = "https://github.com/Alef-Burzmali/netbox-data-flows/issues"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
zip-safe = false

[tool.setuptools.dynamic]
version = {attr = "netbox_data_flows.__version__"}

[tool.setuptools.package-data]
netbox_data_flows = ["templates/**"]

[tool.black]
line-length = 120
target_version = ["py312", "py313"]

[tool.isort]
profile = "black"
line_length = 120
lines_after_imports = 2
skip_gitignore = true
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "NETBOX_CORE", "NETBOX_APPS", "FIRSTPARTY", "LOCALFOLDER"]
known_netbox_core = ["account", "core", "extras", "netbox", "utilities", "users"]
known_netbox_apps = ["circuits", "dcim", "ipam", "tenancy", "virtualization", "vpn", "wireless"]

[tool.flake8]
extend-ignore = ["D100","D101","D102","D103","D104","D105","D106","D107","D401"]
max-line-length = 120
